@@ -10,6 +10,7 @@ Revision history for CSV-AutoClass
     - Add tests
     - Remove internal lib line for ./bin programs
     - Use latest version of CSV::Parser with work-arounds as necessary
+    - Use separate test badges for Linux, MacOS, and Windows
 
 0.1.0  2022-10-27T17:58:04-05:00
     - Fix typos in README
